--- a/package.json
+++ b/package.json
@@ -2,9 +2,12 @@
   "name": "hashcode-2018",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/index.ts",
+    "build": "tsc",
+    "dev": "nodemon --config nodemon.json"
   },
   "repository": {
     "type": "git",
@@ -15,5 +18,11 @@
   "bugs": {
     "url": "https://github.com/Boohja/hashcode-2018/issues"
   },
-  "homepage": "https://github.com/Boohja/hashcode-2018#readme"
+  "homepage": "https://github.com/Boohja/hashcode-2018#readme",
+  "dependencies": {
+    "@types/node": "^14.14.25",
+    "ts-node": "^9.1.1",
+    "tslint": "^6.1.3",
+    "typescript": "^4.1.5"
+  }
 }
